# ncsu-ece398-midterm

./: .gitignore  .gitmodules  Cargo.toml  README.md  analysis_report.md  build.rs  pyproject.toml
.cargo/: config.toml
benchmark/: README.md  __init__.py  ensemble.py  host.py  quantized_c.py
benchmark/results/: final_multiclass_ensemble_accuracy_event_centered.json  final_multiclass_small_event_centered.json  host_baseline_e0.json  host_baseline_e1.json  host_norm_mag_e0.json  multiclass_small_event_centered_1s_20k_30e.json  quantized_c_eval.json
dataset/: README.md
docs/: finn-star-reflection.md  model.md  pipeline.md  tasks.md
model/: __init__.py  cnn.py  dataset.py  export_cmsis.py  metrics.py
model/cmsis/: imu_model.c  imu_model.h  string.h
recordings/: README.md
recordings/cough/: 20260405T221716Z_subject1-neck.csv  20260405T221730Z_subject1-chest.csv  20260405T221808Z_subject2-neck.csv  20260405T221844Z_subject2-chest.csv
recordings/deep_breath/: 20260405T222018Z_subject1-neck.csv  20260405T222031Z_subject1-chest.csv  20260405T222113Z_subject2-chest.csv  20260405T222135Z_subject2-neck.csv
recordings/groan/: 20260405T222548Z_subject1-neck.csv  20260405T222601Z_subject1-chest.csv  20260405T222616Z_subject2-neck.csv  20260405T222629Z_subject2-chest.csv
recordings/laugh/: 20260405T222909Z_subject1-neck.csv  20260405T222920Z_subject1-chest.csv  20260405T222942Z_subject2-neck.csv  20260405T222953Z_subject2-chest.csv
recordings/sneeze/: 20260405T223124Z_subject1-neck.csv  20260405T223136Z_subject1-chest.csv  20260405T223223Z_subject2-neck.csv  20260405T223238Z_subject2-chest.csv
recordings/speech/: 20260405T221242Z_subject1-neck.csv  20260405T221431Z_subject1-chest.csv  20260405T221503Z_subject2-neck.csv  (+1 more)
scripts/: analyze_data.py  flash.sh  interactive_plot.py  monitor_plot.py  monitor_record.py  report_benchmark_size.py  velocity_sliding_std.py  visualize_dataset.py
src/: lib.rs  main.rs  model.rs
tests/: test_benchmark_host.py  test_dataset_windows.py
tools/monitor/: Cargo.toml
(+5 files in other folders)
