[project]
name = "mkboxpro-imu-tools"
version = "0.1.0"
description = "Python utilities for visualizing MKBOXPRO IMU monitor output."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
]

[tool.monitor-plot]
entrypoint = "scripts/monitor_plot.py"
notes = [
  "No third-party Python dependencies are required.",
  "The visualizer uses only the standard library, including tkinter.",
]

[tool.monitor-record]
entrypoint = "scripts/monitor_record.py"
notes = [
  "Writes CSV rows with host-side UTC timestamps and 0/1 labels.",
  "Type 1<Enter> to start a labeled region, 0<Enter> to stop it, and q<Enter> to finish recording.",
]
